--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,7 @@ RoxygenNote: 7.2.3
 Imports: 
   dplyr,
   httr,
-  purrr
+  purrr,
+  stringr
 URL: https://github.com/alexeilutay/YDisk4R
 BugReports: https://github.com/alexeilutay/YDisk4R/issues
