add upload f(), readme from RMD

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(get_YD_files)
 export(get_YD_folders)
 export(set_YD_oath)
+export(upload_file_2YD)
 import(dplyr)
 import(httr)
 import(purrr)
